20090112 ui/win32/win32joystick.c: Win32: Small correction to the file's header
	 info (Marek).
20090112 ui/win32/installer/fuse.nsi: Win32: Added information and license to
	 the header of the NSIS installer script (Marek).
20090114 configure.in,ui/win32/{Makefile.am,icons/Makefile.am}: Win32: Fixed
	 autotools scripts so that 'make dist' works properly for win32 ui (Marek).
20090118 ui/wii/wiimouse.c: Wii: Changed menu navigation so that it's navigated
	 using wii remote in horizontal position, consistently to how wii
	 remote is used during emulation (Marek).
20090118 ui/wii/Makefile.am: Wii: Added wiikeysyms.h to the autotools script
	 (Marek).
20090118 compat/wii/paths.c: Wii: Changed the home path location to absolute
	 path, since the relative doesn't seem to work when saving settings
	 (Marek).
20090122 ui/widget/filesel.c: Widget: Fixed potential problem with length of
	 dirent.d_name and made windows version use constant FILENAME_MAX
	 instead of NAME_MAX (Marek).
20090124 ui/widget/menu.c: Widget: Added capability to define joystick buttons
	 (Marek).
20090126 input.c,ui/wii/wiijoystick.c: Wii: Added support for configuring A, B,
	 Plus and Minus Wii Remote keys (Marek).
20090202 menu.c: fix saving PNG movies (fixes bug #2551259) (Gergely Szasz).
20090210 settings.dat,ui.c,ui/options.dat: allow user to swap Kempston mouse
         buttons as some combinations of physical hardware and spectrum
         software make it hard to use the standard mapping e.g. right clicking
         and moving the cursor on Mac notebooks (thanks, Andrew Owen) (Fred).
20090211 compat/unix/timer.c: added include <sys/time.h> for gettimeofday
         (Fred).
20090211 joystick.[ch],ui/gtk/gtkui.c,ui/widget/widget.c: remove duplication of
         joystick_connection array (patch #1991669) (Gergely Szasz).
20090301 options.pl,select.c: allow the use of the home and end keys in option
         and selection dialogs in the widget UIs (patch #2637459) (Gergely
         Szasz).